fixtures/type_errors/too_many_args_in_application.tl
foo : Int -> Int { x -> x }

bar : Int { foo 2 3 }
